<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stock</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="syncing">Sync of alerts and stock levels in progress &#8230;&#8230;&#8230;</string>
    <string name="scan">Scan</string>

    <string name="orders">Orders</string>
    <string name="requires_stock_take_heading">Requires Stock Take</string>
    <string name="completed_stock_take_heading">Completed Stock Take</string>
    <string name="new_alerts">New Alerts</string>
    <string name="zero_new_alerts">(0) New Alerts</string>
    <string name="completed_stocks">Completed Stock Takes</string>
    <string name="zero_completed_stocks">(0) Completed Stock Takes</string>
        
    <string name="received">Received</string>
    <string name="stock_received_instruction">Please begin scanning of stock received</string>
    <string name="completed_stock_received_heading">Completed Stock Received</string>
    
     <string name="stock">Stock</string>
    <string name="drug_stock_list_heading">Drug Stock List</string>
    

    <string name="hello">Hello</string>
    <string name="empty"></string>
    <string name="msisdn">Please enter Phone Number</string>
    <string name="pin_heading">Please Enter Pin</string>
    <string name="pin_error">The pin you entered was not correct. Please try again.</string>
    <string name="loading_scanner">Loading&#8230;&#8230;&#8230;</string>
    <string name="no_barcode">No barcode received.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_amount">Enter amount</string>
    <string name="scan_heading">You have scanned</string>
    <string name="scan_error">Please note: you have scanned an unknown item. Please scan a registered drug.</string>
    <string name="scan_quantity_error">Please enter an amount.</string>
    <string name="scan_quantity_number_error">Please enter a valid number for the amount.</string>
    <string name="avd_error">Please enter an average daily consumption</string>

    <string name="error_heading">Application Error</string>

    <string name="welcome_reg">Welcome to Stockouts. A registration process is required before making use of this application. The following steps will take you through the process.</string>

    <string name="step_one_top">Step 1</string>
    <string name="step_one_note">Note all fields are compulsory in order to make use of the application</string>
    <string name="step_one_tp">Please enter your sims card\'s unique MSISDN number</string>
    <string name="step_one_bot">Please enter the unique 4 digit pin that was given to you</string>
    <string name="authentication_error">Msisdn or pin is incorrect. Please check and try again, or contact Cell-Life support for assistance.</string>
    <string name="communication_error">Could not communicate with the Stock App server. Please check that the device has an internet connection.</string>

    <string name="proceed">Proceed</string>
    <string name="back">Back</string>

    <string name="step_two_top">Step 2</string>
    <string name="operating_days">Operating Days</string>
    <string name="operating_days_bot">The number of days a week that you will be trading (Default 5 days)</string>
    <string name="safety_time">Safety Time</string>
    <string name="safety_time_bot">The minimum amount of stock a pharmacy must have available at any one time (Default 6 days)</string>
    <string name="lead_time">Lead Time</string>
    <string name="lead_time_bot">The estimated number of DAYS it takes for stock to get delivered (Default 14 days)</string>
    <string name="number_error">Please enter a valid number.</string>
    <string name="step_three_top">Step 3</string>
   <!--- <string name="step_three_main">You are now required to perform an intitial stock take. You will be provided with a list of drugs that require scanning. When you are ready to begin scanning please select proceed.</string>-->
    <string name="step_three_main">Congratulations! You have successfully registered your device. Please click Proceed to start scanning.</string>

    <string name="step_four_head">You have scanned DISPIRIN</string>
    <string name="step_four_top">Enter Quantity</string>
    <string name="step_four_bot">Enter an estimate of how much is used per day</string>

    <string name="thankyou_reg">Thank you for registering. You are now ready to use the Stockouts application. </string>

    <string name="alertNotificationTicker">Stock Take Notification</string>
    <string name="alertNotificationTitle">Scan Stock</string>
    <string name="alertNotificationSubTitle">New Alert</string>
    <string name="alertNotificationSubTitlePlural">New Alerts</string>
    
    <string name="stockNotificationTicker">Stock Notification</string>
    <string name="stockNotificationTitle">Problem with stock synch</string>
    <string name="stockNotificationText">The Stock app was unable to send the latest stock levels to the server. Please contact Cell-Life support if you need assistance. Error: </string>
    
    <string name="server_preferences">Server Preferences</string>
    <string name="server_preferences_url">Server Base URL</string>
    <string name="server_preferences_url_summary">The address of the server used by the Stock app to submit stocks and retrieve alerts.</string>
    <string name="server_preferences_url_error_message_invalid">The specified URL is not valid.</string>
    <string name="server_preferences_url_error_message_connection">Could not connect to the specified URL.</string>
    <string name="server_preferences_url_error_message_authentication">Could not connect to the specified URL due to an authentication error. Please contact Cell-Life support for further assistance.</string>
    <string name="server_preferences_auto_sync_period">Auto sync period</string>
    <string name="server_preferences_auto_sync_period_summary">How often the app will try to communicate with the server in order to receive new alerts and send pending stock information.</string>

    
    <string name="app_preferences">App Preferences</string>
    <string name="offline_days_preferences">Offline days</string>
    <string name="offline_days_preferences_summary">The number of days the Stock app can be offline before a notification is generated.</string>
    <string name="offline_days_preferences_error">Please enter a number for the offline days.</string>

    <string name="offlineNotificationTicker">Stock app is offline</string>
    <string name="offlineNotificationTitle">Stock app is offline</string>
    <string name="offlinekNotificationText">The Stock app has been unable to communicate with the server for some time. Please check your network connection and airtime and then perform a manual sync.</string>

    <string name="drug_alert_title">Drug Alert Details</string>
    <string name="drug__description">Drug Description</string>
    <string name="drug_name">Panado 500 MG</string>
    <string name="bar_code">Barcode</string>
    <string name="code_no">600 152 04</string>
    <string name="alert_date">Alert Date</string>
    <string name="alert_date_num">14 April 2014</string>
    <string name="alert_level_title">Alert Level</string>
    <string name="alert_level_text">RED</string>

    <string name="drugstock_title">Drug Stock Information</string>
    <string name="drugstock_name_title">Drug Name</string>
    <string name="drugstock_name">Accolate</string>
    <string name="laststock_date_title">Date of Last Stock Take</string>
    <string name="laststock_date">25 May 2014</string>
    <string name="laststocklvl_title">Last Stock Level(Units)</string>
    <string name="laststocklvl_text">554</string>
    <string name="avgdaily_title">Average Daily Consumption (Units)</string>
    <string name="avgdaily_text">11</string>
    <string name="eststock_title">Estimated Stock Level (Units)</string>
    <string name="eststock_text">543</string>
    <string name="stockreceived_date_title">Date of last stock received</string>
    <string name="stockreceived_date">1 May 2014</string>
    <string name="stocklvlscan_title">Stock level scanned on date received (Units)</string>
    <string name="stocklvlscan_text">818</string>
    <string name="no_date">-</string>
    <string name="no_stock_estimate">N/A</string>
    <string name="no_stock">-</string>

</resources>
