<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/server_preferences" >
        
        <EditTextPreference
            android:dialogTitle="@string/server_preferences_url"
            android:key="baseUrl"
            android:summary="@string/server_preferences_url_summary"
            android:title="@string/server_preferences_url" />
        
        <ListPreference
            android:dialogTitle="@string/server_preferences_auto_sync_period"
            android:entries="@array/auto_synch_period"
            android:entryValues="@array/auto_synch_period_values"
            android:key="autoSyncMinutes"
            android:summary="@string/server_preferences_auto_sync_period_summary"
            android:title="@string/server_preferences_auto_sync_period" />

    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/app_preferences" >
        
        <EditTextPreference
            android:dialogTitle="@string/offline_days_preferences"
            android:key="offlineDays"
            android:summary="@string/offline_days_preferences_summary"
            android:title="@string/offline_days_preferences" />

    </PreferenceCategory>

</PreferenceScreen>