<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/step_two_head"
        style="@style/step_heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_two_top" />

    <TextView
        android:id="@+id/step_one_note"
        style="@style/red_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one_note"/>

    <TextView
        android:id="@+id/lead_time"
        style="@style/edit_text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_time"/>

    <TextView
        android:id="@+id/lead_time_bot"
        style="@style/edit_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lead_time_bot"/>

    <EditText
        android:id="@+id/lead_text"
        style="@style/EditBox.Small"
        android:inputType="number" />

    <TextView
        android:id="@+id/safety_time"
        style="@style/edit_text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/safety_time"/>

    <TextView
        android:id="@+id/safety_time_bot"
        style="@style/edit_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/safety_time_bot"/>

    <EditText
        android:id="@+id/safety_text"
        style="@style/EditBox.Small"
        android:inputType="number" />

    <TextView
        android:id="@+id/operating_days"
        style="@style/edit_text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/operating_days"/>


    <TextView
        android:id="@+id/operating_days_bot"
        style="@style/edit_text_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/operating_days_bot"/>

    <EditText
        android:id="@+id/operating_text"
        style="@style/EditBox.Small"
        android:inputType="number" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/confirm_button"
            style="@style/Button.Blue"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed"/>

        <Button
            android:id="@+id/cancel_button"
            style="@style/Button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>

</LinearLayout>