<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/cancel_button">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/drug_detail"
                style="@style/drug_alert_title_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_alert_title"/>

            <View
                android:layout_width="fill_parent"
                style="@style/title_divide"
                />

            <TextView
                android:id="@+id/drug__description"
                style="@style/drug_alert_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug__description"/>


            <TextView
                android:id="@+id/drug_name"
                style="@style/edit_text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/drug_name"
                android:singleLine="true"
                />

            <View   
                style="@style/line_divide"
                />

            <TextView
                android:id="@+id/bar_code"
                style="@style/drug_alert_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/bar_code"/>

            <TextView
                android:id="@+id/code_no"
                style="@style/edit_text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_no"/>

            <View
                style="@style/line_divide"
                />

            <TextView
                android:id="@+id/alert_date"
                style="@style/drug_alert_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_date"/>

            <TextView
                android:id="@+id/alter_date_num"
                style="@style/edit_text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_date_num"/>

            <View
                style="@style/line_divide"
                />


            <TextView
                android:id="@+id/alert_level_title"
                style="@style/drug_alert_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_level_title"/>


            <TextView
                android:id="@+id/alert_level_text"
                style="@style/alert_level_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_level_text"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/cancel_button"
        style="@style/Button.Blue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/back"/>

</RelativeLayout>