<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/step_one_head"
        style="@style/step_heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one_top"/>

    <TextView
        android:id="@+id/step_one_note"
        style="@style/red_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one_note"/>

    <TextView
        android:id="@+id/step_one_title"
        style="@style/edit_text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one_tp"/>

    <EditText
        android:id="@+id/msisdn_text"
        style="@style/EditBox.Medium"
        android:inputType="number" />

    <TextView
        android:id="@+id/step_one_lower"
        style="@style/edit_text_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_one_bot"/>

    <EditText
        android:id="@+id/pin_text"
        style="@style/EditBox.Small"
        android:inputType="number" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/confirm_button"
            style="@style/Button.Blue"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed"/>

        <Button
            android:id="@+id/cancel_button"
            style="@style/Button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"/>
    </LinearLayout>

</LinearLayout>