<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/medical_rep"
            style="@style/medical_rep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:src="@drawable/med_rep" />

        <TextView
            android:id="@+id/welcome_reg"
            style="@style/welcome_reg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/scan_button"
            android:gravity="center"
            android:text="@string/welcome_reg"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/scan_button"
            style="@style/Button.Blue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/scan" />
        </RelativeLayout>

</LinearLayout>